styles.css
html{
    margin: 0;
}
body{
    background-blend-mode: overlay; 
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    color:#FFF4EB;
    text-align: center;
    width: 100%;
    height: 100%;
    margin: 0;
    font-family: "Lora", serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}
.overlay{
    background: rgba(0, 0, 0, 0.2); /* Adjust the color and opacity as needed */
    z-index: 1;
}
.container{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100%;
}

.nav-link{
    display: inline-block;
    font-family: "freude", sans-serif;
    color:#FFF4EB;
    transition:transform ease 1s;
}
.nav-link:hover{
    color:#FFF4EB;
}

.section-text{
    color: black;
    padding: 5%;
}
.overlay-about{
    background-image: url("images/rain_image.gif");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
.about-section{
    padding: 8%;
}
.nav-link{
    display: inline-block;
    font-family: "freude", sans-serif;
    color:#FFF4EB;
    transition:transform ease 1s;
}
nav a:hover{
    transform: scale(1.2);
    color:#FFF4EB;
}

h1,h2,h3{
    font-family: "freude", sans-serif;
    font-weight: 400;
    font-style: normal;
}
.form-control, .form-control:focus{
    background-color: #FAF0E6;
}

textarea:focus {
    box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
}

.airplane {
    position: absolute;
    width: 40px;
    opacity: 0;
    transform: translateY(0);
    transition: transform 2s linear, opacity 0.5s ease-in;
}

#waveform {
    cursor: pointer;
    position: relative;
    margin-top: 0;
    padding-top: 0;
  }

  /* Position the quote container absolutely in the center of the screen */
/* Start hidden for the quote */
#quote {
    position: absolute; /* Removes it from normal flow */
    left: 50%;
    top: 65%; /* Adjust based on layout */
    transform: translate(-50%, -50%); /* Centering */
    width: 80%; /* Adjust as needed */
    max-width: 600px; /* Prevents excessive stretching */
    text-align: center;
    font-size: 1.2rem;
    font-style: italic;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
  }
  
  
  /* Fade transitions */
  .fade-in {
    opacity: 1;
    transition: opacity 0.5s ease;
  }
  
  .fade-out {
    opacity: 0;
    transition: opacity 0.5s ease;
  }
  
  
  

